Fix post menu alignment by changing position from right to left

--- a/webapp/channels/src/sass/components/_post-menu.scss
+++ b/webapp/channels/src/sass/components/_post-menu.scss
@@ -5,7 +5,7 @@
     position: absolute;
     z-index: 6;
     top: -12px;
-    right: 0;
+    left: 0;
     display: flex;
     justify-content: flex-end;
     padding: 4px;
